# unirtos-cli

./: .gitignore  MANIFEST.in  README.MD  setup.cfg  unirtos-cli.py
app-tmpl/: CMakeLists.txt  build.py  unirtos_env_setup.py
docs/: Python 包构建指导.md  用户使用手册.md
unirtos_cli/: __main__.py  build.py  clean.py  unirtos_env_setup.py
unirtos_cli/app-tmpl/: .gitignore  CMakeLists.txt  README.md  depend.config  env_config.json
unirtos_cli/app-tmpl/main/src/: main.c
