[metadata]
name = unirtos-cli
version = 0.1.4
author = chavis.chen
author_email = chavis.chen@quectel.com
description = Unirtos CLI Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/githubChenchi/unirtos-cli
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
include_package_data = true
zip_safe = false
[options.package_data]
unirtos_cli =
    app-tmpl/*
    app-tmpl/**/*
    tools/*
    tools/**/*
    *.py

[options.entry_points]
console_scripts =
    unirtos-cli = unirtos_cli.__main__:main
